--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="nsketch.js"></script>
+    <script src="Resources/Javascript/p5.min.js"></script>
+    <script src="Resources/Javascript/p5.dom.min.js"></script>
+    <script src="Resources/Javascript/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="Resources/CSS/style.css">
+    <script src="Resources/Javascript/nsketch.js"></script>
 
   </head>
   <body>
